; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/converter/adb_usb/extr_matrix.c_register_key.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/converter/adb_usb/extr_matrix.c_register_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@matrix = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @register_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_key(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = and i32 %5, 7
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = ashr i32 %7, 3
  %9 = and i32 %8, 15
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %2, align 4
  %11 = and i32 %10, 128
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = shl i32 1, %14
  %16 = xor i32 %15, -1
  %17 = load i32*, i32** @matrix, align 8
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, %16
  store i32 %22, i32* %20, align 4
  br label %32

23:                                               ; preds = %1
  %24 = load i32, i32* %3, align 4
  %25 = shl i32 1, %24
  %26 = load i32*, i32** @matrix, align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = or i32 %30, %25
  store i32 %31, i32* %29, align 4
  br label %32

32:                                               ; preds = %23, %13
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
